Fix sidebar spacing and responsiveness

--- a/manage-client/src/app/shell/sidebar/sidebar.component.scss
+++ b/manage-client/src/app/shell/sidebar/sidebar.component.scss
@@ -1,7 +1,5 @@
 .sidebar {
-  position: fixed;
-  top: 57px;
-  bottom: 0;
-  left: 0;
+  position: relative;
+  top: 60px;
   padding: 10px 0;
 }
